# physx_play

./: CMakeLists.txt  local_build.sh
perpendicular_gear/: CMakeLists.txt  perpendicular_gear.cc
